tests/fixtures/invalid/set_mul_int.py
# Cannot multiply Set[int] and Int
x: set[int] = {1, 2, 3} * 1
